--- a/HomeDishTest/appsettings.json
+++ b/HomeDishTest/appsettings.json
@@ -6,8 +6,5 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-  "BasketApiConfig": {
-    "BaseAddress": "https://tech-api.homedish.co.nz"
-  }
+  "AllowedHosts": "*"
 }
